--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+citus-ha (2.0.1) testing; urgency=low
+
+  * Build system improvements
+
+  * Implement support for VPATH builds, BINDIR, and DESTDIR
+
+ -- Nils Dijk <nils@citusdata.com>  Fri, 22 Feb 2019 17:15:00 +0100
+
+
 citus-ha (2.0.0) testing; urgency=low
 
   * Rework of the CLI to `citusha <verb> <object>`
