--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+citus-rebalancer (8.2.0.citus-1) stable; urgency=low
+
+  * Adds compatibility with Citus 8.2
+
+ -- Burak Velioglu <velioglub@citusdata.com>  Fri, 29 Mar 2019 13:41:23 +0000
+
 citus-rebalancer (8.1.0.citus-1) stable; urgency=low
 
   * Adds compatibility with Citus 8.1
