--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+citus-enterprise (8.1.2.citus-1) stable; urgency=low
+
+  * Don't do redundant ALTER TABLE consistency checks at coordinator
+
+  * Fixes a bug that prevents stack size to be adjusted
+
+  * Fix an issue with some DECLARE .. CURSOR WITH HOLD commands
+
+  * Fix an issue with clean-up mechanism of logical replication
+
+ -- Burak Velioglu <velioglub@citusdata.com>  Thu, 4 Apr 2019 21:29:05 +0000
+
 citus-enterprise (8.2.1.citus-1) stable; urgency=low
 
   * Fixes a bug that prevents stack size to be adjusted
