--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+pgcron (1.1.4.citus-1) stable; urgency=low
+
+  * Adds a cron.host setting to make the postgres host configurable
+  * Fixes a bug that could cause segmentation fault after cron.unschedule
+
+ -- Marco Slot <marco@citusdata.com>  Wed, 17 Apr 2019 14:00:45 +0000
+
 pgcron (1.1.3.citus-1) stable; urgency=low
 
   * PostgreSQL 11 support
