--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pg-auto-failover (1.0.1) testing; urgency=low
+
+  * Official release of 1.0.1
+
+ -- Nils Dijk <nils@citusdata.com>  Mon, 6 May 2019 16:00:00 +0200
+
 pg-auto-failover (1.0.0) testing; urgency=low
 
   * First release of pg_auto_failover
