--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pg-auto-failover (1.0.2) testing; urgency=low
+
+  * Official release of 1.0.2
+
+ -- Nils Dijk <nils@citusdata.com>  Thu, 23 May 2019 18:00:00 +0200
+
 pg-auto-failover (1.0.1) testing; urgency=low
 
   * Official release of 1.0.1
