--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+citus-enterprise (8.2.2.citus-1) stable; urgency=low
+
+  * Fixes a bug in outer joins wrapped in subqueries
+
+ -- Burak Velioglu <velioglub@citusdata.com>  Thu, 13 Jun 2019 16:34:22 +0000
+
 citus-enterprise (8.1.2.citus-1) stable; urgency=low
 
   * Don't do redundant ALTER TABLE consistency checks at coordinator
