--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+pg-auto-failover-enterprise (1.0.3) testing; urgency=low
+
+  * Official release of pg-auto-failover-enterprise  v1.0.3
+
+ -- Murat Tuncer <murat.tuncer@microsoft.com>  Wed, 31 Jul 2019 16:00:00 +0200
+
+
 pg-auto-failover-enterprise (1.0.2) testing; urgency=low
 
   * First release of pg-auto-failover-enterprise
