--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pg-auto-failover (1.0.4) testing; urgency=low
+  
+  * Official release of 1.0.4
+
+ -- Murat Tuncer <murat.tuncer@microsoft.com>  Thu, 5 Sep 2019 14:00:00 +0200
+
 pg-auto-failover (1.0.3) testing; urgency=low
 
   * Official release of 1.0.3
