Debian TopN bump 2.3.0 (#365)
* Bump debian Citus 2.3.0

* Rotate PackageCloud and GitHub encrypted secrets

(cherry picked from commit a0e940d1f1acb9f2930b3b669599360ab63ced82)

* Fix broken timestamp in changelog

* fixup! Bump debian Citus 2.3.0

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+topn (2.3.0) stable; urgency=low
+
+  * Adds support for PostgreSQL 12
+
+ -- Hanefi Onaldi <Hanefi.Onaldi@microsoft.com>  Thu, 31 Oct 2019 12:56:08 +0000
+
 topn (2.2.2) stable; urgency=low
 
   * PG11 beautified
