--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hll (2.13.citus-1) stable; urgency=low
+
+  * Support for PostgreSQL 12 and bug fixes
+
+ -- Hanefi Onaldi <Hanefi.Onaldi@microsoft.com>  Wed, 06 Nov 2019 10:26:00 +0000
+
 hll (2.12.citus-1) stable; urgency=low
 
   * Support for PostgreSQL 11 and bug fixes
