--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,27 @@
+citus (9.1.1.citus-1) stable; urgency=low
+
+  * Fixes a bug causing SQL-executing UDFs to crash when passing in DDL
+
+  * Fixes a bug that caused column_to_column_name to crash for invalid input
+
+  * Fixes a bug that caused inserts into local tables w/ dist. subqueries to crash
+
+  * Fixes a bug that caused some noop DML statements to fail
+
+  * Fixes a bug that prevents dropping reference table columns
+
+  * Fixes a crash in IN (.., NULL) queries
+
+  * Fixes a crash when calling a distributed function from PL/pgSQL
+
+  * Fixes an issue that caused CTEs to sometimes leak connections
+
+  * Fixes strange errors in DML with unreachable sublinks
+
+  * Prevents statements in SQL functions to run outside of a transaction
+
+ -- Onur Tirtir <Onur.Tirtir@microsoft.com>  Wed, 18 Dec 2019 14:32:42 +0000
+
 citus (9.1.0.citus-1) stable; urgency=low
 
   * Adds extensions to distributed object propagation infrastructure
