--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,25 @@
+citus (9.2.3.citus-1) stable; urgency=low
+
+  * Do not use C functions that have been banned by Microsoft
+
+  * Fixes a bug that causes wrong results with complex outer joins
+
+  * Fixes issues found using static analysis
+
+  * Fixes left join shard pruning in pushdown planner
+
+  * Fixes possibility for segmentation fault in internal aggregate functions
+
+  * Fixes possible segfault when non pushdownable aggregates are used in HAVING
+
+  * Improves correctness of planning subqueries in HAVING
+
+  * Prevents using old connections for security if citus.node_conninfo changed
+
+  * Uses Microsoft approved cipher string for default TLS setup
+
+ -- Onur Tirtir <Onur.Tirtir@microsoft.com>  Thu, 26 Mar 2020 8:22:48 +0000
+
 citus (9.0.2.citus-1) stable; urgency=low
 
   * Fixes build errors on EL/OL 6 based distros
