--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+citus-enterprise (9.2.4.citus-1) stable; urgency=low
+
+  * Fixes a release problem in 9.2.3
+
+ -- Onur Tirtir <Onur.Tirtir@microsoft.com>  Tue, 31 Mar 2020 08:07:33 +0000
+
 citus-enterprise (9.2.3.citus-1) stable; urgency=low
 
   * Fixes build errors on EL/OL 6 based distros
