--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+citus-enterprise (9.2.4.citus-1) stable; urgency=low
+
+  * Fixes a release problem in 9.2.3
+
+ --  <Jelte.Fennema@microsoft.com>  Tue, 31 Mar 2020 8:41:10 +0000
+
 citus-enterprise (9.2.3.citus-1) stable; urgency=low
 
   * Do not use C functions that have been banned by Microsoft
