--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+citus-enterprise (9.2.5.citus-1) stable; urgency=low
+{
+  "message": "No commit found for the ref v9.2.5",
+  "documentation_url": "https://developer.github.com/v3/repos/contents/"
+}
+ -- Jelte Fennema <Jelte.Fennema@microsoft.com>  Wed, 1 Apr 2020 10:13:9 +0000
+
 citus-enterprise (9.2.4.citus-1) stable; urgency=low
 
   * Fixes a release problem in 9.2.3
