--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pg-auto-failover-enterprise (1.3.citus-1) stable; urgency=low
+
+  * Apply changes from community version
+
+ -- Jelte Fennema <Jelte.Fennema@microsoft.com>  Wed, 6 May 2020 10:48:20 +0000
+
 pg-auto-failover-enterprise (1.0.6) testing; urgency=low
 
   * Official release of pg-auto-failover-enterprise  v1.0.6
