--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+pg-auto-failover (1.3.0.citus-1) stable; urgency=low
+
+  * Fix systemd integration [#212]
+  * Change default TLS cipher list [#214]
+  * SSL certificates management fixes [#228]
+  * Improve replication slots handling [#222]
+  * Implement pg_autoctl enable|disable ssl [#233]
+  * Implement pg_autoctl show uri --monitor [#238]
+  * Implement pg_autoctl stop|reload for the monitor [#241]
+  * Don't create pgautofailover_monitor user anymore [#247]
+
+ -- Jelte Fennema <Jelte.Fennema@microsoft.com>  Wed, 6 May 2020 12:25:22 +0000
+
 pg-auto-failover (1.2) testing; urgency=low
 
   * Official release of 1.2
