--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+citus (1.3.1.citus-1) stable; urgency=low
+{
+  "message": "No commit found for the ref v1.3.1",
+  "documentation_url": "https://developer.github.com/v3/repos/contents/"
+}
+ -- Jelte Fennema <Jelte.Fennema@microsoft.com>  Thu, 7 May 2020 8:0:3 +0000
+
 pg-auto-failover (1.2) testing; urgency=low
 
   * Official release of 1.2
