--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pg-auto-failover (1.3.1-1) stable; urgency=low
+
+  * Official 1.3.1 release of pg_auto_failover
+
+ -- Jelte Fennema <Jelte.Fennema@microsoft.com>  Thu, 7 May 2020 11:56:36 +0000
+
 pg-auto-failover (1.2) testing; urgency=low
 
   * Official release of 1.2
