--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pg-auto-failover-enterprise (1.3.1-1) stable; urgency=low
+
+  * Official 1.3.1 release of pg_auto_failover enterprise
+
+ -- Jelte Fennema <Jelte.Fennema@microsoft.com>  Thu, 7 May 2020 12:09:10 +0000
+
 pg-auto-failover-enterprise (1.0.6) testing; urgency=low
 
   * Official release of pg-auto-failover-enterprise  v1.0.6
@@ -5,7 +11,7 @@ pg-auto-failover-enterprise (1.0.6) testing; urgency=low
  -- Murat Tuncer <murat.tuncer@microsoft.com>  Thu, 13 Feb 2020 16:00:00 +0200
 
 pg-auto-failover-enterprise (1.0.5) testing; urgency=low
-  
+
   * Official release of pg-auto-failover-enterprise  v1.0.5
 
  -- Murat Tuncer <murat.tuncer@microsoft.com>  Thu, 26 Sep 2019 16:00:00 +0200
@@ -25,17 +31,17 @@ pg-auto-failover-enterprise (1.0.2) testing; urgency=low
 
 
 citus-ha (2.1.0) testing; urgency=low
- 
+
   * Fix: wait until postgres is ready after pg_ctl start before connecting
- 
+
   * Fix default HBA connection privileges from coordinator to worker nodes
- 
+
   * Feature: allow formations to run without secondaries
- 
+
   * Added nodename and nodeport to the output of `citusha show state`
- 
+
   * Use absolute pgdata path for monitor config and keeper config
- 
+
   * Deduplicate pg_ctl if the same is on the path twice
 
  -- Nils Dijk <nils@citusdata.com>  Thu, 18 Apr 2019 17:43:00 +0100
