--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pg-auto-failover-enterprise (1.3.1-1) stable; urgency=low
+
+  * Official 1.3.1 release of pg_auto_failover enterprise
+
+ -- Jelte Fennema <Jelte.Fennema@microsoft.com>  Thu, 7 May 2020 12:9:10 +0000
+
 pg-auto-failover-enterprise (1.0.6) testing; urgency=low
 
   * Official release of pg-auto-failover-enterprise  v1.0.6
