--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+citus (9.3.5.citus-1) stable; urgency=low
+
+  * Fixes ALTER TABLE IF EXISTS SET SCHEMA with non-existing table bug
+
+  * Fixes CREATE INDEX CONCURRENTLY with no index name on a postgres table bug
+
+  * Fixes a crash because of overflow in partition id with certain compile flags
+
+ -- Onur Tirtir <Onur.Tirtir@microsoft.com>  Mon, 27 Jul 2020 7:28:18 +0000
+
 citus (9.3.4.citus-1) stable; urgency=low
 
   * Fixes a bug that could cause crashes with certain compile flags
