--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+citus-enterprise (9.4.2.citus-1) stable; urgency=low
+
+  * Fixes a bug that could lead to multiple maintenance daemons
+
+  * Fixes an issue preventing views in reference table modifications
+
+  * Replaces citus.replication_sslmode with citus.node_conninfo
+
+ -- Onur Tirtir <Onur.Tirtir@microsoft.com>  Thu, 22 Oct 2020 7:25:05 +0000
+
 citus-enterprise (9.4.1.citus-1) stable; urgency=low
 
   * Fixes EXPLAIN ANALYZE output truncation
