--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+citus (9.4.3.citus-1) stable; urgency=low
+
+  * Enables PostgreSQL's parallel queries on EXPLAIN ANALYZE
+
+  * Fixes a bug that triggers subplan executions unnecessarily with cursors
+
+ -- Onur Tirtir <Onur.Tirtir@microsoft.com>  Tue, 24 Nov 2020 11:17:57 +0000
+
 citus (9.5.0.citus-1) stable; urgency=low
 
   * Adds support for PostgreSQL 13
