--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+topn (2.3.1) stable; urgency=low
+
+  * Adds support for PostgreSQL 13
+  * Support parallel queries and aggregates
+
+ -- Hanefi Onaldi <Hanefi.Onaldi@microsoft.com>  Mon, 30 Nov 2020 14:35:00 +0300
+
 topn (2.3.0) stable; urgency=low
 
   * Adds support for PostgreSQL 12
