--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pg-auto-failover-enterprise (1.4.1-1) stable; urgency=low
+
+  * Official 1.4.1 release of pg_auto_failover enterprise
+
+ -- Hanefi Onaldi <Hanefi.Onaldi@microsoft.com>  Thu, 3 Dec 2020 18:51:21 +0300
+
 pg-auto-failover-enterprise (1.3.2-1) stable; urgency=low
 
   * Official 1.3.2 release of pg_auto_failover enterprise
