--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+citus (9.4.4.citus-1) stable; urgency=low
+
+  * Fixes a bug that could cause router queries with local tables to be pushed
+  down
+
+  * Fixes a segfault in connection management due to invalid connection hash
+  entries
+
+  * Fixes possible issues that might occur with single shard distributed tables
+
+ -- gurkanindibay <gindibay@microsoft.com>  Tue, 5 Jan 2021 8:3:56 +0000
+
 citus (9.5.1.citus-1) stable; urgency=low
 
   * Enables PostgreSQL's parallel queries on EXPLAIN ANALYZE
