--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+citus (9.4.4.citus-1) stable; urgency=low
+
+  * Official 9.4.4 release of Citus
+
+ -- gurkanindibay <gindibay@microsoft.com>  Wed, 6 Jan 2021 6:6:9 +0000
+
 citus-enterprise (9.5.1.citus-1) stable; urgency=low
 
   * Enables PostgreSQL's parallel queries on EXPLAIN ANALYZE
