--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+citus-enterprise (9.5.2.citus-1) stable; urgency=low
+
+  * Fixes distributed deadlock detection being blocked by metadata sync
+
+  * Prevents segfaults when SAVEPOINT handling cannot recover from connection
+  failures
+
+  * Fixes possible issues that might occur with single shard distributed tables
+
+ -- Gurkan Indibay <gindibay@microsoft.com>  Thu, 28 Jan 2021 7:35:14 +0000
+
 citus-enterprise (9.4.4.citus-1) stable; urgency=low
 
   * Fixes a bug that could cause router queries with local tables to be pushed
