--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pg-auto-failover (1.4.2-1) stable; urgency=low
+
+  * Official 1.4.2 release of pg_auto_failover
+
+ -- Gurkan Indibay <gindibay@microsoft.com>  Thu, 4 Feb 2021 12:42:14 +0000
+
 pg-auto-failover (1.4.1-1) stable; urgency=low
 
   * Official 1.4.1 release of pg_auto_failover
