--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pg-auto-failover-enterprise (1.4.2-1) stable; urgency=low
+
+  * Official 1.4.2 release of pg_auto_failover enterprise
+
+ -- Gurkan Indibay <gindibay@microsoft.com>  Fri, 5 Feb 2021 7:16:1 +0000
+
 pg-auto-failover-enterprise (1.4.1-1) stable; urgency=low
 
   * Official 1.4.1 release of pg_auto_failover enterprise
